templates/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: {service}-service
  labels:
    app: {service}
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: {service}
